# alfred

./: .gitignore  CONSENT.md  LICENSE  PLAN.md  PRIVACY.md  README.md  THREATMODEL.md  pyproject.toml
.github/workflows/: ci.yml
browser-extension/: background.js  manifest.json  options.html  options.js
docs/: index.html
docs/demo/: index.html
eval/: README.md  SEAL.md  dev_smoke.jsonl  frozen_set.draft.jsonl
eval/results/: dev_smoke-2026-07-18T20-04-31.jsonl  dev_smoke-2026-07-18T20-06-03.jsonl  dev_smoke-2026-07-21T19-12-31.jsonl  dev_smoke-2026-07-21T19-14-17.jsonl  dev_smoke-2026-07-21T19-15-36.jsonl  dev_smoke-2026-07-21T19-17-59.jsonl  frozen_set-2026-07-19T01-03-02.jsonl
src/alfred/: __init__.py  clearance.py  config.py  customs.py  doctor.py  fieldlog.py  gate.py  gestures.py  globalkeys.py  harness.py  hud.py  ledger.py  motion.py  palette.py  planner.py  registry.py  schemas.py  settings.py  shortcut.py  summon.py  tabs.py  telemetry.py  tray.py  undo.py  vocab.py  voice.py  web.py  webpage.py
src/alfred/adapters/: __init__.py  apps.py  browser.py  clipboard.py  files.py  media.py  windows.py
src/carson/: __init__.py  __main__.py  config.py  customs.py  executor.py  gate.py  ledger.py  palette.py  registry.py  schemas.py  summon.py  tray.py  undo.py  validator.py
src/carson/adapters/: __init__.py  media.py  system.py
tests/: test_apps_registry.py  test_book_gate_executor.py  test_clearance.py  test_customs.py  test_doctor.py  test_eval_set.py  test_fieldlog.py  test_gestures.py  test_globalkeys.py  test_harness.py  test_hud.py  test_motion.py  test_palette.py  test_planner.py  test_registry.py  test_settings.py  test_summon.py  test_tabs.py  test_validator_adversarial.py  test_vocab.py  test_voice.py  test_web.py
