[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred"
version = "0.1.0"
description = "A proper butler for your PC — local agentic assistant with a deterministic safety gate"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
ui = ["pystray>=0.19", "Pillow>=10"]
media = ["pycaw>=20240210"]
voice = ["faster-whisper>=1.0", "sounddevice>=0.4", "piper-tts>=1.3"]
motion = ["opencv-python>=4.10"]
hotkey = ["keyboard>=0.13"]
vision = ["mediapipe>=0.10.30", "opencv-python>=4.10"]

[project.scripts]
alfred = "alfred.palette:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
